# kb-yaml-to-lens

./: .gitignore  .markdownlintignore  .yamlfix.toml  .yamllint  AGENTS.md  CODERABBIT.md  CODE_STYLE.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  Makefile.shared  README.md  RELEASE.md  documentation_update_process.md  mkdocs.yml  pyproject.toml  yaml_reference.md
.cursor/: Dockerfile  environment.json
.github/: pull_request_template.md
.github/actions/setup-node-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/scripts/: Makefile
.github/workflows/: auto-label-triage.yml  build-binaries.yml  build-compiler-binaries.yml  build-kibana-base-images.yml  claude-address-coderabbit-feedback.yml  claude-for-pr-feedback.yml  claude-helper.yml  claude-issue-triage.yml  claude-on-mention-assist.yml  claude-on-mention-create-issues.yml  claude-on-open-or-label.yml  claude-project-manager.yml  claude-with-issues.yml  create-release.yml  deploy-gh-pages.yml  docker-build-publish.yml  lint-test-build.yml  publish-binaries.yml  publish-to-pypi.yml  publish-vscode-extension.yml  run-claude.yml  tidy-pr.yml
compiler/: AGENTS.md  CODERABBIT.md  DEVELOPING.md  Dockerfile  Makefile  README.md  pyproject.toml
compiler/inputs/: esql-controls-example.yaml  esql-controls-metrics-test.yaml
compiler/inputs/crowdstrike/: README.md  overview.yaml  vulnerability.yaml
compiler/inputs/crowdstrike-modern/: README.md  asset-vulnerability.yaml  compliance-audit.yaml  soc.yaml
compiler/inputs/elastic_agent/: 01-overview.yaml  02-agent-metrics.yaml  03-concerning-agents.yaml  04-integrations.yaml  05-input-metrics.yaml  06-s3-input-metrics.yaml  07-cloudwatch-input-metrics.yaml  08-azure-blob-storage-input-metrics.yaml  09-azure-eventhub-input-metrics.yaml  10-gcp-storage-input-metrics.yaml  11-gcp-pubsub-input-metrics.yaml  12-tcp-input-metrics.yaml  13-udp-input-metrics.yaml  14-http-endpoint-input-metrics.yaml  15-unix-input-metrics.yaml  16-lumberjack-input-metrics.yaml  17-filestream-input-metrics.yaml  18-winlog-input-metrics.yaml  19-etw-input-metrics.yaml  20-unified-logs-input-metrics.yaml  21-cel-input-metrics.yaml  22-httpjson-input-metrics.yaml  23-streaming-input-metrics.yaml  24-entity-analytics-input-metrics.yaml
compiler/inputs/sample-data-example/: config.yaml
compiler/scripts/: build_binaries.py  compare_dashboards.py  compare_panel_counts.sh  remove_redundant_positions.py  test_binary_smoke.sh  test_cli_smoke.sh  test_docker_smoke.sh  test_lsp_binary_smoke.sh
compiler/src/dashboard_compiler/: cli.py  cli_context.py  cli_local.py  cli_remote.py  dashboard_compiler.py  kibana_client.py  utils.py  yaml_roundtrip.py
compiler/tests/: test_cli_error_messages.py  test_docstring_examples.py  test_error_scenarios.py  test_example_dashboards.py  test_kibana_client.py  test_markdown_examples.py  test_yaml_examples.py
compiler/tests/controls/: test_controls.py
compiler/tests/dashboards/: test_auto_layout_integration.py  test_dashboard_options.py  (+3 more)
dashboard_compiler/compile/: compile.py
dashboard_compiler/controls/: compile.py  config.md  config.py  view.py
dashboard_compiler/dashboard/: compile.py  config.py  view.py
dashboard_compiler/filters/: compile.py  config.md  config.py  view.py
dashboard_compiler/panels/: __init__.py  compile.py  config.py  view.py
dashboard_compiler/shared/: compile.py  config.py  errors.py  model.py  view.py
docs/: CLI.md  CODE_STYLE.md  DEVELOPING.md  Makefile  dashboard-decompiling-guide.md  dashboard-style-guide.md  index.md  mkdocs.yml  programmatic-usage.md  pypi-publishing.md  vscode-extension.md
docs/advanced/: color-assignments.md  esql-views.md  legend-configuration.md
docs/api/: controls.md
docs/content/: CLI.md  dashboard-style-guide.md  index.md  llms-full.txt  llms.txt  vscode-extension.md
docs/controls/: config.md
docs/dashboard/: dashboard.md
docs/examples/: color-palette-examples.yaml  controls-example.yaml  dimensions-example.yaml  filters-example.yaml  heatmap-examples.yaml  index.md  metric-formatting-examples.yaml  multi-panel-showcase.yaml  navigation-example.yaml
docs/hooks/: __init__.py  generate_llms_txt.py
docs/llm-workflows/: index.md
docs/panels/: auto-layout.md  base.md  datatable.md  esql.md  heatmap.md  image.md  lens.md  markdown.md  metric.md  mosaic.md  pie.md  tagcloud.md  xy.md
fixture-generator/: AGENTS.md  Dockerfile  Dockerfile.base  FIXTURES.md  Makefile  README.md  generate-all.js  generator-utils.ts  tsconfig.json
fixture-generator/examples/: datatable-with-formula.js  heatmap.ts  mosaic.ts  xy-chart-esql-metric-appearance.ts
github/workflows/: README.md
inputs/: esql-controls-example.yaml  esql-controls-metrics-test.yaml
inputs/aerospike/: config.yaml
licenses/: README.md
scripts/: build_binaries.py  bump-version.py  check-merge-conflicts.sh  compare_dashboards.py  compile_configs_to_ndjson.py  compile_docs.py  snapshots_to_ndjson.py
src/dashboard_compiler/: AGENTS.md  cli.py  kibana_client.py
tests/: conftest.py  test_cli_error_messages.py  test_examples.py  test_examples.py.disabled  test_kibana_client.py  test_yaml_examples.py
tests/controls/: test_controls.py
tests/dashboards/: test_dashboards.py
tests/filters/: conftest.py  test_compile.py  test_data.py  test_filters.py
tests/panels/: test_compile_panels.py  test_grid_validation.py
tests/queries/: test_esql_queries.py
tests/sample_data/: test_loader.py
tests/shared/: test_compile_utils.py  test_defaults.py
tests/tools/: test_disassemble.py
vscode-extension/: .gitignore  AGENTS.md  BUILDING.md  CODE_STYLE.md  DEVELOPING.md  Makefile  README.md  TESTING.md  eslint.config.mjs  package-lock.json  package.json
vscode-extension/media/: preview.css
vscode-extension/scripts/: build_lsp_binary.py  bundle_compiler.sh  copy_all_lsp_binaries.sh  copy_binary.sh  copy_lsp_binary.sh
vscode-extension/snippets/: dashboards.json
vscode-extension/src/: binaryResolver.ts  compiler.ts  esqlResultsPanel.ts  extension.ts  fileWatcher.ts  gridEditorPanel.ts  previewPanel.ts
(+365 files in other folders)
