[project]
name = "kb-dashboard-compiler-root"
version = "0.1.9"
description = "Root project for the kb-yaml-to-lens project"
readme = "./README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "kb-dashboard-compiler",
    "click>=8.0",
]

[tool.uv.sources]
kb-dashboard-compiler = { path = "compiler", editable = true }

[dependency-groups]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.32",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.0",
    "griffe-pydantic>=1.1.8",
    "griffe-fieldz>=0.4.0",
    "mkdocs-click>=0.8.0",
]
