[project]
name = "kb-dashboard-compiler-root"
version = "0.1.10"
description = "Root project for the kb-yaml-to-lens project"
readme = "./README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "kb-dashboard-compiler",
    "click>=8.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37",
    "yamlfix>=1.19.0",
    "ruff>=0.14",
]

[tool.uv.sources]
kb-dashboard-compiler = { workspace = true }

[tool.uv.workspace]
members = ["packages/kb-dashboard-compiler", "packages/kb-dashboard-docs"]


[tool.ruff]
line-length = 140
# Assume Python 3.12
target-version = "py312"
# Add commonly ignored directories
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "reference",
    "**/*.old.py",
]

[tool.ruff.lint]

# When using extend-select, a rule like PLR will enable PLR* rules like PLR0###.
extend-select = [
    "A", "ARG", "B", "C4", "COM", "DTZ", "E", "EM", "F", "FURB", "I",
    "LOG", "N", "PERF", "PIE", "PLR", "PLW", "PT", "PTH", "Q", "RET",
    "RSE", "RUF", "S", "SIM", "TC", "TID", "TRY", "UP", "W",
    "D",  # Add docstring checks since kb-yaml-to-lens uses them
    # Additional quality and safety rules:
    "ANN",  # flake8-annotations - Type annotations
    "PLE",  # Pylint errors - Serious bug detection
    "T10",  # flake8-debugger - Prevent debugger statements
    "ISC",  # flake8-implicit-str-concat - Prevent string concat bugs
    "FA",   # flake8-future-annotations - Modern type hints (PEP 563)
    "PGH",  # pygrep-hooks - Additional code quality checks
    "INP",  # flake8-no-pep420 - Explicit namespace packages
]
ignore = [
    "COM812",  # Conflicts with formatter
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D413",    # multi-line-summary-second-line
    "D100",    # Ignore missing docstrings for modules
    "A002",    # Allow shadowing builtin names (e.g., 'filter')
    "ANN401",  # We use Pyright for Any checking
]

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
"packages/kb-dashboard-compiler/**/__init__.py" = ["F401"]    # Ignore unused imports in __init__.py files
"packages/kb-dashboard-compiler/tests/**/*.py" = [
    "S101", # Allow assert usage in tests
    "PLR2004", # Allow magic values in test assertions
    "INP001", # Tests are not meant to be imported as packages
]
"packages/kb-dashboard-compiler/src/dashboard_compiler/**/view.py" = [
    "N815", # Ignore casing requirements for view models
    "N803",  # Ignore lowercase arguments in view models
    "D101", # Ignore missing docstrings in view models
    "ANN202", # Ignore missing return type for private serializer methods
    "ERA001", # Allow commented JSON structure documentation
]
"packages/kb-dashboard-compiler/src/dashboard_compiler/lsp/grid_*.py" = [
    "PLR2004", # Allow magic numbers (CLI arg counts)
    "PLR0911", # Allow many return statements in grid_updater
    "PLR0912", # Allow many branches in grid_updater
    "PLR0915", # Allow many statements in grid_updater
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["dashboard_compiler"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "recommended"
reportImportCycles = "error"
reportExplicitAny = false
include = ["packages"]
exclude = [
    "**/.venv/**",
    "**/output/**",
    "**/*.old.py",
    "**/kb-dashboard-docs/**",  # Docs hooks use mkdocs which isn't in root deps
    "**/vscode-extension/**",  # TypeScript extension, not Python
]

[[tool.basedpyright.executionEnvironments]]
root = "packages/kb-dashboard-compiler/src"
extraPaths = ["packages/kb-dashboard-compiler/src"]
reportIncompatibleVariableOverride = false

[[tool.basedpyright.executionEnvironments]]
root = "packages/kb-dashboard-compiler/tests"
# Tests use many libraries and test patterns that trigger type warnings.
# The volume of warnings makes inline ignores impractical for test code.
extraPaths = ["packages/kb-dashboard-compiler/src"]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportAny = false
reportArgumentType = false
reportCallIssue = false
reportMissingImports = false
reportUninitializedInstanceVariable = false
reportUnusedCallResult = false
reportImplicitOverride = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUntypedNamedTuple = false

[[tool.basedpyright.executionEnvironments]]
root = "packages/kb-dashboard-compiler/src/dashboard_compiler/yaml_roundtrip.py"
# ruamel.yaml lacks type stubs and returns dynamic types from load/dump operations.
reportAny = false
reportUnknownMemberType = false
